Revert "Merge branch 'master' into ecc-amendments"
This reverts commit 819ed7c279ddf9a85d61b080cba99be59fb5eab1, reversing
changes made to 9ffd82e0eaf771bd6511f6ddb4da68a5b4175c18.